--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <main>
             <section id="about">
                 <h1>About Me</h1>
+                <img src="images/hesbon 1.jpg" style="width: 300px; height: 300px;">
                 <p>I am Hesbon Kayode Mochengo, a dynamic and dedicated Computer Scientist with a Bachelor’s degree in Applied Computer Science. I am passionate about leveraging my skills in data manipulation, front-end web design, and technical support to drive impactful solutions. With a keen eye for detail and a commitment to excellence, I strive to deliver exceptional service aligned with organizational objectives.
 
                     My experience spans roles in data classification, IT policy development, and computer maintenance, where I honed my problem-solving and communication skills. I am a proactive learner and a collaborative team player, passionate about fostering positive relationships and making a lasting impact.</p>
