--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My Portfolio</title>
         <link rel="stylesheet" href="style.css">
-        style>
+        <style>
         .image-container {
             position: relative;
-            width: 300px; /* Adjust as needed */
+            width: 300px;
         }
         .image-container img {
             position: absolute;
