--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             width: 100%;
             height: auto;
         }
-        .image-container .hesbon 1.jpg {
+        .image-container .hesbon 1 {
             z-index: 1;
         }
-        .image-container .hesbon 2.jpg {
+        .image-container .hesbon 2{
             z-index: 2;
             opacity: 0.5; 
         }
@@ -46,8 +46,8 @@
             <section id="about">
                 <h1>About Me</h1>
                 <div class="image-container"
-                <img src="images/hesbon 1.jpg" class="hesbon 1.jpg">
-                    <img src="images/hesbon 2.jpg" class="hesbon 2.jpg">
+                <img src="images/hesbon 1.jpg" class="hesbon 1">
+                    <img src="images/hesbon 2.jpg" class="hesbon 2">
                 <p>I am Hesbon Kayode Mochengo, a dynamic and dedicated Computer Scientist with a Bachelor’s degree in Applied Computer Science. I am passionate about leveraging my skills in data manipulation, front-end web design, and technical support to drive impactful solutions. With a keen eye for detail and a commitment to excellence, I strive to deliver exceptional service aligned with organizational objectives.
 
                     My experience spans roles in data classification, IT policy development, and computer maintenance, where I honed my problem-solving and communication skills. I am a proactive learner and a collaborative team player, passionate about fostering positive relationships and making a lasting impact.</p>
