--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
     <div class="info-box">
         <h1>Hello, I'm Kayode</h1>
         <h3>A Computer Scientist based in Nairobi, Kenya</h3>
-        <p>I'm a skilled Applied Computer Science graduate with a strong background in data analysis, technical support, and software development. I have successfully worked on projects such as an online hostel booking system and a train booking system, demonstrating my ability to design and implement effective tech solutions. With expertise in data manipulation, IT policy development, and a passion for technology and innovation,
-            I'm committed to leveraging my skills to solve real-world problems and drive digital transformation</p>
+        <p>Hi, I’m Hesbon Kayode Mochengo, a passionate tech enthusiast, data expert, and problem solver with a background in Applied Computer Science. I specialize in data classification, technical support, IT policy development, and system maintenance, with hands-on experience in developing digital solutions like online hostel and train booking systems.
+
+This portfolio showcases my work, skills, and projects that highlight my expertise in technology, innovation, and digital transformation. Whether you're looking for a tech professional, a consultant, or a collaborator, I’d love to connect and explore opportunities together.</p>
         
     </div>
     <div class="btn-box">
