--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <div class="info-box">
         <h1>Hello, I'm Kayode</h1>
         <h3>A Computer Scientist based in Nairobi, Kenya</h3>
-        <p>Hi, I’m Hesbon Kayode Mochengo, a passionate tech enthusiast, data expert, and problem solver with a background in Applied Computer Science. I specialize in data classification, technical support, IT policy development, and system maintenance, with hands-on experience in developing digital solutions like online hostel and train booking systems.
+        <p>Hi, I’m Hesbon Kayode Mochengo, a passionate tech enthusiast, data expert, and problem solver with a background in Applied Computer Science. I specialize in data classification, technical support, IT policy development, and system maintenance, with hands-on experience in developing digital solutions.
 
 This portfolio showcases my work, skills, and projects that highlight my expertise in technology, innovation, and digital transformation. Whether you're looking for a tech professional, a consultant, or a collaborator, I’d love to connect and explore opportunities together.</p>
         
@@ -113,11 +113,13 @@ This portfolio showcases my work, skills, and projects that highlight my experti
     <div class="about-box">
         <div class="about-info">
         <h1 style="color: white;">About Me</h1>
-        <p>I’m a dedicated Computer Scientist with a Bachelor’s degree in Applied Computer Science. I specialize in data manipulation, IT support, front-end web design, and computer networks, bringing a detail-oriented and proactive approach to every project.
+        <p>I’m a tech-driven professional with a strong foundation in Applied Computer Science and a passion for leveraging technology to solve real-world challenges. With experience in data classification, technical support, IT policy development, and system maintenance, I thrive at the intersection of innovation and functionality.
 
-            I have hands-on experience working with organizations like SAMASource Kenya and ICT Solutions, where I contributed to data classification, IT maintenance, and technical support. My ability to ensure data integrity, optimize system performance, and develop IT policies reflects my commitment to delivering reliable and efficient solutions.
-            
-            With a passion for continuous learning, I hold certifications in areas like Cybersecurity Awareness, Advanced Excel, and Information Security. </p>
+Beyond my technical expertise, I have contributed to developing digital solutions, including an online hostel booking system and a train booking system, demonstrating my ability to create impactful and user-friendly applications. My skill set extends to data manipulation, CRM software, cybersecurity, and customer engagement, making me adaptable across various industries.
+
+I’m always eager to learn, innovate, and collaborate on projects that drive digital transformation. Whether you’re a business looking for tech solutions or a professional seeking insights, I’d love to connect and explore possibilities together.
+
+Let’s build something great! 🚀 </p>
     </div>
     <h2 style="color: white;">SKILLS</h2>
     <div class="skills">
