--- a/index.html
+++ b/index.html
@@ -172,11 +172,14 @@ Let’s build something great! 🚀 </p>
 
 <div class="box">
     <h3>Data annotation</h3>
-    <p>I have hands-on experience in data annotation, specializing in ensuring high-quality and accurate data for machine learning models. My role at SAMASource Kenya involved image and video annotation, as well as classifying products into categories to maintain data integrity and quality standards.
+    
+    <p>I have hands-on experience in data annotation, specializing in ensuring high-quality and accurate data for machine learning models.
+    My role at SAMASource Kenya involved image and video annotation, as well as classifying products into categories to maintain data integrity and quality standards.</p>
 
-        With a keen eye for detail, I excel at labeling data accurately, identifying patterns, and verifying information to enhance model performance. My ability to follow guidelines meticulously and manage large datasets efficiently ensures that annotated data is both reliable and consistent.
+       <p> With a keen eye for detail, I excel at labeling data accurately, identifying patterns, and verifying information to enhance model performance.
+           My ability to follow guidelines meticulously and manage large datasets efficiently ensures that annotated data is both reliable and consistent.</p>
         
-        I understand the importance of clean and well-labeled data in driving the success of AI and machine learning projects and am passionate about contributing to such initiatives with precision and efficiency.</p>
+        <p>I understand the importance of clean and well-labeled data in driving the success of AI and machine learning projects and am passionate about contributing to such initiatives with precision and efficiency.</p>
         <img src="Data-Annotation.webp" alt="">
 </div>
 </div>
