--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ Let’s build something great! 🚀 </p>
         <p style="text-align: center;"><strong>Email:</strong> hesbonkayode@gmail.com</p>
         <p style="text-align: center;"><strong>Phone Number:</strong> +254 115909665</p>
         <div class="cv-box">
-            <p><strong>CV:</strong> <a href="hesbon kayode cv.pdf" target="_blank" style="color: white; text-decoration: underline;">Download CV</a></p>
+            <p><strong>CV:</strong> <a href="hesbon cv.pdf" target="_blank" style="color: white; text-decoration: underline;">Download CV</a></p>
         </div>
         <style>
             .cv-box {
